--- a/bio.html
+++ b/bio.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="https://www.linkedin.com/resume-builder/urn:li:fsd_memberResume:53264794/">RESUME</a>
-    <p>Hi everyone, This is Manuel Ortiz, From child I sold Toys to other children, I've work as restaurant, survey and field assistent, I'm a System and Electronic Technical, currently I'm studying Web Development (I'm Junior right now) and English (A2 Oxford Certification) at Platzi, Electronic Engineer at ITFIP, I'm living in Colombia</p>
+    <p>Hello everyone, This is Manuel Ortiz, From child I sold Toys to other children, I've work as restaurant, survey and field assistent, I'm a System and Electronic Technical, currently I'm studying Web Development (I'm Junior right now) and English (A2 Oxford Certification) at Platzi, Electronic Engineer at ITFIP, I'm living in Colombia</p>
 </body>
 </html>
