cv and biography changes

--- a/bio.html
+++ b/bio.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Biography</title>
 </head>
 <body>
-    <p>Hello everyone, This is Manuel Ortiz, From child I sold Toys to other children, I've work as restaurant, survey and field assistent, I'm a System and Electronic Technical, currently I'm studying Web Development (I'm Junior right now) and English (A2 Oxford Certification) at Platzi, Electronic Engineer at ITFIP, I'm living in Colombia</p>
+    <p>Hi everyone, this is Manuel Ortiz, I'm studying Computer Sciences and English at ITFIP and Platzi, I've worked as a survey, field, lab assistent, curretly I'm working on my own projects, I'm a System and Electronic Technical, I'm living in Colombia</p>
 </body>
 </html>
