--- a/bio.html
+++ b/bio.html
@@ -8,6 +8,17 @@
     <title>Biography</title>
 </head>
 <body>
-    <p>Hi everyone, this is Manuel Ortiz, I'm studying Computer Sciences and English at ITFIP and Platzi, I've worked as a survey, field, lab assistent, curretly I'm working on my own projects, I'm a System and Electronic Technical, I'm living in Colombia</p>
+    <!-- Content: about me, projects -->
+    <section>
+        <ul>
+            <a shape="rect" href="./index.html">HOME</a>
+            <a href="./projects/projects.html">PROJECTS</a>
+            <a href="./blog/blog.html">BLOG</a>
+            <a href="contact.html">CONTACT</a>
+
+        </ul>
+    </section>
+    <h1>Biography</h1>
+    <p>Hi everyone, this is Manuel Ortiz, I'm studying Computer Sciences and English at ITFIP and Platzi, I've worked as a survey, field, lab assistent, curretly I'm working on my own projects, I'm a System and Electronic Technical, I like technology, I'm living in Colombia</p>
 </body>
 </html>
