--- a/bio.html
+++ b/bio.html
@@ -11,10 +11,10 @@
     <!-- Content: about me, projects -->
     <section>
         <ul>
-            <a shape="rect" href="./index.html">HOME</a>
-            <a href="./projects/projects.html">PROJECTS</a>
-            <a href="./blog/blog.html">BLOG</a>
-            <a href="contact.html">CONTACT</a>
+            <a class="my_button" shape="rect" href="./index.html">HOME</a>
+            <a class="my_button" href="./projects/projects.html">PROJECTS</a>
+            <a class="my_button" href="./blog/blog.html">BLOG</a>
+            <a class="my_button" href="contact.html">CONTACT</a>
 
         </ul>
     </section>
