--- a/bio.html
+++ b/bio.html
@@ -19,6 +19,6 @@
         </ul>
     </section>
     <h1>Biography</h1>
-    <p>Hi everyone, this is Manuel Ortiz, I'm studying Computer Sciences and English at ITFIP and Platzi, I've worked as a survey, field, lab assistent, curretly I'm working on my own projects, I'm a System and Electronic Technical, I like technology, I'm living in Colombia</p>
+    <p>Hi everyone, this is Manuel Ortiz, I was born in Colombia, and since childhood I sold toys to children. I'm currently studying Computer Science and English at ITFIP and Platzi. I've worked as a surveyor, musician, field and lab assistent. Curretly, I'm working on my own projects. I'm a Technician in Electronics and Systems. <a href="https://manuelortizus.github.io/projects/projects.html">I enjoy building technology projects</a>, <a href="https://paulgraham.com/read.html">reading</a> and <a href="https://manuelortizus.github.io/blog/blog.html">writing</a>. I'm currently living in Colombia</p>
 </body>
 </html>
