--- a/bio.html
+++ b/bio.html
@@ -12,10 +12,11 @@
     <section>
         <ul>
             <a class="my_button" shape="rect" href="./index.html">HOME</a>
+            <a class="my_button" href="./bio.html">BIO</a>
+            <a class="my_button" href="./work/work_asset.html">WORK</a>
             <a class="my_button" href="./projects/projects.html">PROJECTS</a>
             <a class="my_button" href="./blog/blog.html">BLOG</a>
-            <a class="my_button" href="contact.html">CONTACT</a>
-
+            <a class="my_button" href="./contact.html">CONTACT</a>
         </ul>
     </section>
     <h1>Biography</h1>
