Biography and other updates

--- a/bio.html
+++ b/bio.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Biography</title>
+    <title>Bio</title>
 </head>
 <body>
+    <!--<div id="google_translate_element"></div>
+    <script type="text/javascript">// <![CDATA[
+    function googleTranslateElementInit() {
+    new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+    }
+    // ]]></script>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript">Translate</script>-->
     <!-- Content: about me, projects -->
     <section>
         <ul>
@@ -19,7 +26,9 @@
             <a class="my_button" href="./contact.html">CONTACT</a>
         </ul>
     </section>
-    <h1>Biography</h1>
-    <p>Hi everyone, this is Manuel Ortiz, I was born in Colombia, and since childhood I sold toys to children. I'm currently studying Computer Science and English at ITFIP and Platzi. I've worked as a surveyor, musician, field and lab assistent. Curretly, I'm working on my own projects. I'm a Technician in Electronics and Systems. <a href="https://manuelortizus.github.io/projects/projects.html">I enjoy building technology projects</a>, <a href="https://paulgraham.com/read.html">reading</a> and <a href="https://manuelortizus.github.io/blog/blog.html">writing</a>. I'm currently living in Colombia</p>
+    <h1>Bio</h1>
+    <p>Manuel Ortiz is a software, hardware programmer and writer. He's currently studying Computer Science at ITFIP and Platzi. He has experience working on surveyor, music, field and lab assistent, and <a href="./work/work_asset.html">fixing electronic devices</a>. Curretly, He's working on his own projects.</p>
+
+    <p>He's Technician in Electronics and Systems. He enjoy building <a href="https://manuelortizus.github.io/projects/projects.html">technology projects</a>, automation things, <a href="https://paulgraham.com/read.html">reading</a>, <a href="https://manuelortizus.github.io/blog/blog.html">writing</a>, continous learning, growing and living English. He's currently living in Colombia.</p>
 </body>
 </html>
